<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExerciseApp</string>
    <string name="settings_content_desc">系统设置</string>
    <string name="mute_content_desc">打开关闭系统声音</string>
    <string name="free_mode_desc">打开关闭系统声音</string>
    <string name="free_mode">自由模式</string>
    <string name="intelli_mode">智能模式</string>
    <string name="intelli_mode_desc">智能健身模式</string>
    <string name="immersion_mode">实景体验</string>
    <string name="immersion_mode_desc">实景体验</string>
    <string name="exercise_start_stop_content_desc">启动/结束健身</string>
    
    <string name="time_selection_10min">10分钟</string>
    <string name="time_selection_20min">20分钟</string>
    <string name="time_selection_30min">30分钟</string>
    <string name="time_selection_40min">40分钟</string>
    <string name="time_selection_50min">50分钟</string>
    <string name="default_time_display">0分钟</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    
    <string name="distance_selection_1km">1.0km</string>
    <string name="distance_selection_2km">2.0km</string>
    <string name="distance_selection_3km">3.0km</string>
    <string name="distance_selection_4km">4.0km</string>
    <string name="distance_selection_5km">5.0km</string>
    <string name="default_distance_display">0km</string>
    
    <string name="calorie_selection_100kcal">100千卡</string>
    <string name="calorie_selection_200kcal">200千卡</string>
    <string name="calorie_selection_300kcal">300千卡</string>
    <string name="calorie_selection_400kcal">400千卡</string>
    <string name="calorie_selection_500kcal">500千卡</string>
    <string name="default_calorie_display">0千卡</string>
    
    <string name="speed_selection_4km_per_h">4.0km/h</string>
    <string name="speed_selection_6km_per_h">6.0km/h</string>
    <string name="speed_selection_8km_per_h">8.0km/h</string>
    <string name="speed_selection_10km_per_h">10.0km/h</string>
    <string name="speed_selection_12km_per_h">12.0km/h</string>
    <string name="default_speed_display">4.0km/h</string>
    
    <string name="incline_selection_0_percent">0%</string>
    <string name="incline_selection_3_percent">3%</string>
    <string name="incline_selection_6_percent">6%</string>
    <string name="incline_selection_9_percent">9%</string>
    <string name="incline_selection_12_percent">12%</string>
    <string name="default_incline_display">0%</string> 
    
    
    <string name="back">返回</string> 
    <string name="user_manager">用户管理</string> 
    <string name="system_setting">系统设置</string> 
    <string name="about">关于软件</string> 
    <string name="factory">出厂设置</string> 
    <string name="error_dialog_title">硬件异常，请联系工作人员</string> 
    <string name="confirm_error_notification">我知道了</string> 
    
    <string name="time_elapsed_label">已运动时间</string> 
    <string name="heart_rate_label">心率</string> 
        
	<!--     SeeJoPlayer -->
    <string name="path">/sdcard/test0.mp4</string>
    
</resources>
