<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/header"
    android:layout_centerHorizontal="true"
    android:background="@drawable/table_normal_selector"
    android:visibility="gone"
    android:padding="12dp"
    tools:context=".FreeMode" >

    <LinearLayout
        android:id="@+id/speed_selection_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/speed_selection_4km_per_h"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/speed_selection_4km_per_h" />

        <Button
            android:id="@+id/speed_selection_6km_per_h"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/speed_selection_6km_per_h" />

        <Button
            android:id="@+id/speed_selection_8km_per_h"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/speed_selection_8km_per_h" />

        <Button
            android:id="@+id/speed_selection_10km_per_h"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="4dp"
            android:text="@string/speed_selection_10km_per_h" />

        <Button
            android:id="@+id/speed_selection_12km_per_h"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="4dp"
            android:text="@string/speed_selection_12km_per_h" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed_adjust_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_selection_group"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sub_speed_btn"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/sub" />
        
        <TextView
            android:id="@+id/adjusted_speed_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/default_speed_display"
            android:textColor="#333333" >
        </TextView>
            
        <Button
            android:id="@+id/add_speed_btn"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:text="@string/add" />
    </LinearLayout>

</RelativeLayout>