<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".ExerciseMain" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/mute"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/mute_content_desc"
            android:scaleType="fitXY"
            android:src="@drawable/mute" >
        </ImageButton>

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/settings_content_desc"
            android:scaleType="fitXY"
            android:src="@drawable/settings" >
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exercise_mode_container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <LinearLayout
            android:id="@+id/exercise_free_mode_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <ImageButton
                android:id="@+id/free_mode_btn"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:contentDescription="@string/free_mode_desc"
                android:scaleType="fitXY"
                android:src="@drawable/mute" >
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_mode" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exercise_intelli_mode_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <ImageButton
                android:id="@+id/intelli_mode_btn"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:contentDescription="@string/intelli_mode_desc"
                android:scaleType="fitXY"
                android:src="@drawable/mute" >
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intelli_mode" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exercise_immersion_mode_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <ImageButton
                android:id="@+id/immersion_mode_btn"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:contentDescription="@string/immersion_mode_desc"
                android:scaleType="fitXY"
                android:src="@drawable/mute" >
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immersion_mode" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>