<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    tools:context=".Main" >

    <LinearLayout
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <include layout="@layout/header_setting"  /> 

    </LinearLayout>

    <LinearLayout
        android:id="@+id/exercise_mode_container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <LinearLayout
            android:id="@+id/exercise_free_mode_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <ImageButton
                android:id="@+id/aerobics_btn"
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:background="@drawable/aerobics"
                android:contentDescription="@string/free_mode_desc"
                android:scaleType="fitXY" >

            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="有氧健身"
                android:textSize="20sp" >

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exercise_intelli_mode_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <ImageButton
                android:id="@+id/fast_btn"
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:background="@drawable/fast"
                android:contentDescription="@string/intelli_mode_desc"
                android:scaleType="fitXY" >

            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="快速瘦身"
                android:textSize="20sp" >

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exercise_immersion_mode_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <ImageButton
                android:id="@+id/streng_btn"
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:background="@drawable/streng"
                android:contentDescription="@string/immersion_mode_desc"
                android:scaleType="fitXY" >

            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="强化训练"
                android:textSize="20sp" >

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <ImageButton
                android:id="@+id/memorize_btn"
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:background="@drawable/memorize"
                android:contentDescription="@string/immersion_mode_desc"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="记忆模式"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>